fix word-break in #userhistory

--- a/styles/_delicious.scss
+++ b/styles/_delicious.scss
@@ -1925,6 +1925,11 @@ a[href^='alltorrents.php?action=history&userid='] {
     border-bottom: $primaryborder;
 }
 
+.forum_post td.body {
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
 .author_info {
     width: 178px !important;
 	padding: 14px 0 !important;
